@@ -72,8 +72,9 @@ override_dh_install:
 	dh_install -pipython3-qtconsole
 
 	# jquery-ui-themes provides more in javascript/jquery-ui-themes (not available in 12.04)
-	dh_linktree -v -pipython-notebook-common replace usr/share/javascript/jquery-ui/themes \
-	  usr/share/ipython/notebook/static/jquery/css/themes
+	# disabled as long as the ui dev branch is used
+	#dh_linktree -v -pipython-notebook-common replace usr/share/javascript/jquery-ui/themes \
+	#  usr/share/ipython/notebook/static/jquery/css/themes
 
 	mkdir -p $(CURDIR)/debian/ipython/usr/share/icons/hicolor/scalable/apps/
 	cp IPython/frontend/qt/console/resources/icon/IPythonConsole.svg \
